[gd_scene load_steps=5 format=3 uid="uid://cro4dsaaw46m6"]

[ext_resource type="Script" uid="uid://xrqu7ocbd6ce" path="res://Script/PlayerController.gd" id="1_kpjcp"]
[ext_resource type="Script" uid="uid://bpfyr0a0ogs5x" path="res://Script/Player.gd" id="1_xhfnw"]
[ext_resource type="Script" uid="uid://d2113ln4fmisb" path="res://Script/InteractionSystem.gd" id="4_cxr5p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0rwas"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_xhfnw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_0rwas")

[node name="PlayerController" type="Node3D" parent="."]
script = ExtResource("1_kpjcp")

[node name="Camera3D" type="Camera3D" parent="PlayerController"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
current = true

[node name="InteractionSystem" type="Node3D" parent="."]
script = ExtResource("4_cxr5p")

[node name="CanvasLayer" type="CanvasLayer" parent="InteractionSystem"]

[node name="UI_Container" type="Control" parent="InteractionSystem/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InteractionLabel" type="Label" parent="InteractionSystem/CanvasLayer/UI_Container"]
layout_mode = 0
offset_left = 585.0
offset_top = 701.0
offset_right = 1330.0
offset_bottom = 927.0
theme_override_font_sizes/font_size = 50
text = "pgvrtvr"
horizontal_alignment = 1
vertical_alignment = 1
